# CS143-Projects

./: README.md  index.html
1a/: calculator.php
1b/: queries.sql  query.php  readme.txt  team.txt  violate.sql
1c/: index.html  readme.txt  team.txt
1c/add/: addActorRelation.php  addDirectorRelation.php  addMovie.php  addMoviePost.php  addPerson.html  addPerson.php  addReview.php
1c/browse/: actor.php  movie.php  movies.php  search.php
1c/common/: json.php
1c/css/: foundation.css
1c/query/: addMovie.php  addPerson.php  addRelation.php  addReview.php
1c/sql/: create.sql  load.sql
1c/testcase/: t1.html  t2.html  t3.html  t4.html  t5.html
1c/www/: index.html
1c/www/add/: addActorRelation.php  addDirectorRelation.php  addMovie.html  addMovie.php  addPerson.html  addReview.php
1c/www/browse/: actor.php  actors.php  movie.php  movies.php  search.php
1c/www/js/: result.js
1c/www/query/: addMovie.php  addPerson.php  addRelation.php  addReview.php
2/bruinbase/: BTreeIndex.cc  BTreeIndex.h  BTreeNode.cc  BTreeNode.h  CMakeLists.txt  Makefile  SqlEngine.cc  bruinbase  main.cc
